<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivityVehiculo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/background_002" />

    <TextView
        android:id="@+id/lbnCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/lbnCuatro"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="430dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtCodigoV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtCodigoV"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/lstIdCliente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background" />

        <EditText
            android:id="@+id/edtMarca"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtMarca"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtModelo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtModelo"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPlaca"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtPlaca"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtColor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtColor"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtTipo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtTipo"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBuscarV"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toStartOf="@+id/btnEditarV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ImageButton
        android:id="@+id/btnGuardarV"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVolverV"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/btnVolverV"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEliminarV"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/btnEditarV"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/btnEliminarV"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/btnRegistroV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorBtn2"
        android:text="@string/btnRegistroV"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarV" />


</androidx.constraintlayout.widget.ConstraintLayout>