<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivityCliente">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/background_002" />

    <TextView
        android:id="@+id/lbnTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/lbnTres"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="375dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtCodigoC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtCodigoC"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtNombreC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtNombreC"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtApellidoC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtApellidoC"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="edtTelefono"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtCorreo"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtDireccion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtDireccion"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBuscarC"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toStartOf="@+id/btnEditarC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ImageButton
        android:id="@+id/btnGuardarC"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVolverC"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/btnVolverC"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEliminarC"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/btnEditarC"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/btnEliminarC"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/btnRegistroC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorBtn2"
        android:text="@string/btnRegistroC"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarC" />

</androidx.constraintlayout.widget.ConstraintLayout>