<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivityRegistro">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/background_002" />

    <TextView
        android:id="@+id/lbnSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/lbnSeis"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="329dp"
        android:layout_height="429dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtCodigoR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtCodigoR"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/lstIDVehiculo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background" />

        <Spinner
            android:id="@+id/lstIDServicioS"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background" />

        <EditText
            android:id="@+id/edtFecha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtFecha"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtHoraInicio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtHoraInicio"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtHoraFin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtHoraFin"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPrecioR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/editext_background"
            android:ems="10"
            android:hint="@string/edtPrecioR"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBuscarR"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toStartOf="@+id/btnEditarR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ImageButton
        android:id="@+id/btnGuardarR"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVolverR"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/btnVolverR"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEliminarR"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/btnEditarR"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/btnEliminarR"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/btnRegistroR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorBtn2"
        android:text="@string/btnRegistroR"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarR" />

</androidx.constraintlayout.widget.ConstraintLayout>